--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -27,16 +27,18 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
+    "clsx": "^2.1.1",
     "puppeteer": "^23.0.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "clsx": "^2.1.1",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.0",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -44,7 +46,6 @@
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
     "ts-jest": "^29.0.0",
     "typescript": "^5.2.2"
   }
